AddBookingWindow, DB,
- Fix Room and Floor Indexing Problem but needs Optimization

- fix delete Person and moving person to trash table (the problem was, the attribute types of trash_collcection diffrent from Person)

- when u choose a room, only available rooms should appair in AddBooking

- removing room will cancel all booking with it (tested)